tests/fail/BitwiseXorError.java
package fail;

public class BitwiseXorError {
    public static void main(String[] args) {
        System.out.println("a" ^ 42);
    }
}